Add display to HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Odin Calculator</title>
 </head>
 <body>
+    <div class="display">12345</div>
     <div class="digits">
         <button>1</button>
         <button>2</button>
