--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     <title>Odin Calculator</title>
 </head>
 <body>
-    <div class="display">12345</div>
-    <div class="digits">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>0</button>
-    </div>
-    <div class="operators">
-        <button>+</button>
-        <button>-</button>
-        <button>*</button>
-        <button>/</button>
-        <button>=</button>
-        <button>clear</button>
+    <div class="display"></div>
+    <div id="buttons">
+        <div id="digits">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>0</button>
+        </div>
+        <div id="operators">
+            <button>+</button>
+            <button>-</button>
+            <button>*</button>
+            <button>/</button>
+            <button>=</button>
+            <button>Clear</button>
+        </div>
     </div>
 </body>
 </html>
